applications/prd/data-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-api-prd
  labels:
    app: data-api
    environment: production
