applications/prd/data-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-api
  namespace: data-api-prd
  labels:
    app: data-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: data-api
